--- a/web/dev/index.css
+++ b/web/dev/index.css
@@ -44,9 +44,10 @@
 }
 
 #text {
-    color: #8B008B;
+    color: #ffffff;
+    font: bold;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
     padding: 0px 100px;
 }
 
@@ -65,6 +66,10 @@
     float: left;
     display: grid;
     align-items: center;
+    background-image: url("../images/candidata.jpg");
+    background-size: 100%;
+    overflow: hidden;
+    color: #f655a0;
 }
 
 .empresa {
@@ -84,4 +89,10 @@ div #header {
     display: inline;
 }
 
-.thumb_area
+.thumb_area {
+    background-image: url("../images/background_camuflado.jpeg");
+    width: 100%;
+    height: 500px;
+    display: grid;
+    align-items: center;
+}
